--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,6 +31,7 @@
     - configuration
     - postfix
     - postfix-install
+  when: ansible_os_family == "Debian"
 
 - name: configure mailname
   template:
